observability_bk/tracing/tracing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tempo
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
    - host: tempo.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: tempo
                port:
                  number: 3100
